# homework

./: .editorconfig  .gitignore  Gemfile  README.md  Rakefile  cleanup.sh  ongoing hw.pas  settings.rb
OOP/hw01/: .gitignore  CMakeLists.txt  unit1.lfm
OOP/lb02/: main.cpp
OOP/practice-01/: DB.sqlite3  object-decomp.pu  project1.lpi  project1.lpr  unit3.lfm  unit4.lfm  unit4.pas  unit5.lfm  unit5.pas
OOP/practice-02/: Cargo.toml
OOP/practice02-new/: main.cpp
adoc_styles/: code_style.rb  my-theme.yml
db-course/: .RData  .Rhistory  Untitled.ipynb  asdf.nb.html  auditorium.py  auditorium.tsv  dis_prof.py  dis_prof.tsv  group_codes.tsv  lessons.tsv  lessons.tv  professorts.tsv  schedule.py  schedule.tsv  students.tsv
db/lb01/: README.adoc  depo.sql  depos.csv
db/lb1/: README.adoc
db/lb2/: README.adoc
db/lb3/: README.adoc
electrotech/: ElTech RK3.ipynb
electrotech/hw1/: ДЗ 1.ipynb
informatics/: first.py  first.result.csv  hw02.adoc  second.py  second.result.csv  third.py  third.result.csv
latex/: lab.tex  labreport.cls
oop/: .gitignore  hw.adoc  practice.adoc
oop/exam/: .gitignore  exam-attrs.template.adoc  header.part.adoc  sheet1.adoc  sheet2.adoc
oop/hw01/: README.adoc  unit1.pas  unit2.pas
oop/hw02/: README.adoc
oop/hw3/: README.adoc
oop/lb01/: README.adoc  main.cpp
oop/lb02/: README.adoc  (+1 more)
oop/lb10/: CMakeLists.txt  Deck.cpp  Deck.h  README.adoc  SortableDeck.cpp  SortableDeck.h  SortedDeck.cpp  SortedDeck.h  lb10.pro  main.cpp  sortabledeckform.cpp  sortabledeckform.h  sortabledeckform.ui
web/: pre-exam-task.rb  report_10.adoc
(+332 files in other folders)
